--- a/index.html
+++ b/index.html
@@ -73,3 +73,19 @@ Kane, who has scored 12 goals in 23 appearances for his country, was described a
 
 <a class="w3-btn"   href="https://www.bbc.co.uk/sport/football/44208841"
 target="blank"> View Page  </a>
+
+
+
+
+
+<a class="w3-btn"   href="https://www.bbc.co.uk/sport/football/44208841"
+target="blank"> View Page  </a>
+
+
+<div class="searchbar">
+  <a class="active" 
+      <a href="#world"><a class="w3-btn"   href="https://jakevella13.github.io/WaterShortage/index.html"
+target="blank"> Next Article  </a></a>
+     <link rel="stylesheet"
+          href="index.css">
+
