--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body>
      
     <div class="searchbar">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="#home"><a class="w3-btn"   href="https://kst982.github.io/News/"> Home</a></a>
   <a href="#uk">UK</A>
       <a href="#world">World</a>
       <a href="#sport">Sport</a>
@@ -73,12 +73,6 @@ Kane, who has scored 12 goals in 23 appearances for his country, was described a
 
 <a class="w3-btn"   href="https://www.bbc.co.uk/sport/football/44208841"
 target="blank"> View Page  </a>
-
-
-
-
-
-
 
 
 <div class="searchbar">
