--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@ target="blank"> View Page  </a>
 
 
 <div class="searchbar">
-  <a class="active" 
-      <a href="#world"><a class="w3-btn"   href="https://jakevella13.github.io/WaterShortage/index.html"
-target="blank"> Next Article  </a></a>
-     <link rel="stylesheet"
-          href="index.css">
+  <a class="active" href="#home"><a class="w3-btn"   href="https://jakevella13.github.io/West-Ham---Pellegrini/index.html"> Previous Article</a></a>
+  <a href="#uk"><a class="w3-btn"   href="https://jakevella13.github.io/WaterShortage/index.html"
+target="blank"> Next Article  </a></A>
+      <a
 
